--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,38 @@
     box-sizing: border-box;
 }
 /* fine reset */
+
+
+/* common */
+.flex {
+    display: flex;
+}
+/* fine common */
+
+
+/* sidebar */
+#sidebar {
+    background-color: black;
+    width: 230px;
+    height: calc(100vh - 90px);
+}
+/* fine sidebar */
+
+
+/* main */
+main {
+    background-color: #151922;
+    flex-grow: 1;
+    overflow: auto;
+    height: calc(100vh - 90px);
+}
+/* fine main */
+
+/* now-playing */
+#now-playing {
+    background-color: #282828;
+    position: fixed;
+    width: 100%;
+    height: 90px;
+}
+/* fine now-playing */
