--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,15 @@ section {
 
 h2 {
     color: white;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
+.section-subtitle {
+    color: #787B82;
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 30px;
+}
 /**************************
     FINE COMMON
 **************************/
@@ -66,7 +72,7 @@ main {
 }
 
 #main-content {
-    padding: 104px 20px 20px;
+    padding:30px 20px;
 }
 
 /* top bar */
@@ -89,6 +95,21 @@ main {
     border-radius: 27px;
 }
 /* fine top bar */
+
+/* nav */
+nav {
+    color: #787B82;
+    font-weight: bold;
+    font-size: 12px;
+    padding-top: calc(84px + 20px);
+    padding-left: 20px;
+    padding-right: 20px;
+
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+/* fine nav */
 
 /* sezione recently played */
 .cards {
@@ -121,6 +142,9 @@ main {
 /* fine sezione recently played */
 
 /* sezione Artisti popolari */
+.popular-artist {
+    padding-bottom: 0px;
+}
 .popular-artist img {
     border-radius: 50%;
 }
