--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ h2 {
     font-size: 12px;
     margin-bottom: 30px;
 }
+
+.mobile-shown {
+    display: none;
+}
 /**************************
     FINE COMMON
 **************************/
@@ -53,8 +57,105 @@ h2 {
     background-color: black;
     width: 230px;
     height: calc(100vh - 90px);
+    padding: 20px 20px 7px;
+    overflow: auto;
 }
 
+.mobile-hidden {
+    flex-direction: column;
+    height: 100%;
+}
+
+.logo {
+    width: 130px;
+    margin-bottom: 22px;
+}
+
+.sidebar-nav {
+    color: #787B82;
+    list-style-type: none;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 2.2;
+    margin-bottom: 20px;
+}
+
+.sidebar-nav .fa-solid {
+    font-size: 20px;
+    margin-right: 6px;
+}
+
+.sidebar-nav .active {
+    color: white;
+    position: relative;
+}
+
+.yellow-line {
+    background-color: #B4F458;
+    width: 3px;
+    height: 35px;
+
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.playlist {
+    padding-bottom: 20PX;
+}
+.playlist-title {
+    color: white;
+    font-weight: bold;
+
+}
+.playlist-list {
+    color: #787B82;
+    list-style-type: none;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 2.2;
+}
+
+.create-playlist {
+    color: #787B82;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.create-playlist .fa-solid {
+    font-size: 36px;
+    margin-right: 10px;
+    transform: translateY(25%);
+}
+
+.profile {
+    color: #787B82;
+    font-weight: bold;
+    flex-grow: 1;
+
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
+
+.install .fa-regular {
+    margin-right: 5px;
+}
+.gray-line {
+    background-color: #787B82;
+    width: 100%;
+    height: 2px;
+    margin: 10px 0;
+}
+
+.account {
+    color: white;
+}
+
+.account .fa-solid {
+    font-size: 20px;
+    margin-right: 5px;
+}
 /**************************
     FINE SIDEBAR
 **************************/
@@ -109,9 +210,27 @@ nav {
     gap: 20px;
     flex-wrap: wrap;
 }
+
+.active {
+    position: relative;
+}
+
+.underline {
+    background-color: #B4F458;
+    width: 30px;
+    height: 2px;
+
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translate(-50%);
+}
 /* fine nav */
 
 /* sezione recently played */
+.recently-played h2 {
+    margin-bottom: 30px;
+}
 .cards {
     gap: 15px;
 }
@@ -205,6 +324,7 @@ nav {
 /* media query x-small */
 @media screen and (max-width: 576px) {
 
+    /* main */
     main {
         width: calc(100vw - 50px);
     }
@@ -212,17 +332,94 @@ nav {
     #top-bar {
         width: calc(100vw - 50px);
     }
-    #sidebar {
-        width: 50px;
-    }
 
     .card {
         max-width: 100%;
         width: calc((100vw - 50px - 40px) / 2 - 15px / 2);
     }
+    /* fine main */
+
+    /* sidebar */
+    #sidebar {
+        width: 50px;
+        padding: 10px 10px;
+        overflow: hidden;
+    }
+
+    .sidebar-nav {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+    }
+
+    .mobile-hidden {
+        display: none;
+    }
+
+    .mobile-shown {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .mobile-shown .mobile {
+        margin: 0;
+        font-size: 30px;
+    }
+
+    .fa-house.mobile {
+        font-size: 26.66px;
+    }
+    
+    .fa-circle-down {
+        margin-bottom: 20px;
+    }
+
+    .logo {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .profile {
+        justify-content: center;
+    }
+
+    .fa-circle-user {
+        color: white;
+    }
+    /* fine sidebar */
+
 }
 /* fine media query x-small */
 
 /**************************
     FINE MEDIA QUERY
+**************************/
+
+
+/**************************
+    CUSTOM SCROLLBAR
+**************************/
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #282828; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #414141; 
+}
+
+/**************************
+    FINE CUSTOM SCROLLBAR
 **************************/
