--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h2 {
     background-color: black;
     width: 230px;
     height: calc(100vh - 90px);
-    padding: 20px 20px 7px;
+    padding: 20px 20px 0px;
     overflow: auto;
 }
 
@@ -150,6 +150,7 @@ h2 {
 
 .account {
     color: white;
+    padding-bottom: 10px;
 }
 
 .account .fa-solid {
@@ -282,12 +283,100 @@ nav {
 **************************/
 
 #now-playing {
+    display: flex;
     background-color: #282828;
     position: fixed;
     width: 100%;
     height: 90px;
 }
 
+.now-playing-left {
+    color: #787B82;
+    font-weight: bold;
+    align-items: center;
+    gap: 10px;
+    max-width: 25%;
+    flex-grow: 1;
+
+    padding: 0px 10px;
+}
+
+.now-playing-left img {
+    width: 42px;
+}
+
+.now-playing-left .song {
+    margin-right: 40px;
+}
+
+.now-playing-left .song .title {
+    color: white;
+    font-size: 20px;
+}
+
+.now-playing-left .like, 
+.now-playing-left .folder {
+    font-size: 20px;
+}
+
+.now-playing-middle {
+    flex-grow: 1;
+}
+.now-playing-middle .upper {
+    color: white;
+    font-size: 20px;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+
+    padding: 10px 0px; 
+}
+
+.now-playing-middle .upper .fa-circle-play {
+    font-size: 30px;
+    padding: 0px 10px;
+}
+
+.now-playing-middle .lower {
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+}
+
+.bar {
+    padding: 0px 20px;
+    width: 100%;
+    max-width: 430px;
+}
+
+.bar .left {
+    height: 4px;
+    width: 20%;
+    background-color: #C1C1C1;
+}
+
+.bar .right {
+    height: 4px;
+    width: 80%;
+    background-color: #5B5B5B;
+}
+
+.now-playing-right {
+    justify-content: flex-end;
+    align-items: center;
+    max-width: 25%;
+    flex-grow: 1;
+    gap: 10px;
+    color: white;
+    padding-right: 10px;
+}
+
+.now-playing-right .bar {
+    max-width: 110px;
+    padding: 0;
+}
 /**************************
     FINE NOW PLAYING BAR
 **************************/
