--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,15 @@ h2 {
 .mobile-shown {
     display: none;
 }
+
+a {
+    text-decoration: none;
+    color: #787B82;
+}
+
+a:hover {
+    color: white;
+}
 /**************************
     FINE COMMON
 **************************/
@@ -58,7 +67,6 @@ h2 {
     width: 230px;
     height: calc(100vh - 90px);
     padding: 20px 20px 0px;
-    overflow: auto;
 }
 
 .mobile-hidden {
@@ -85,7 +93,7 @@ h2 {
     margin-right: 6px;
 }
 
-.sidebar-nav .active {
+.sidebar-nav a.active {
     color: white;
     position: relative;
 }
@@ -102,8 +110,9 @@ h2 {
 }
 
 .playlist {
-    padding-bottom: 20PX;
+    overflow: auto;
 }
+
 .playlist-title {
     color: white;
     font-weight: bold;
@@ -117,6 +126,10 @@ h2 {
     line-height: 2.2;
 }
 
+.playlist a:hover .create-playlist {
+    color: white;
+
+}
 .create-playlist {
     color: #787B82;
     font-weight: bold;
@@ -136,6 +149,10 @@ h2 {
 
     flex-wrap: wrap;
     align-content: flex-end;
+}
+
+.install {
+    margin-top: 10px;
 }
 
 .install .fa-regular {
@@ -184,6 +201,7 @@ main {
     justify-content: flex-end;
     position: fixed;
     width: calc(100% - 230px);
+    z-index: 5;
 }
 
 #top-bar .button {
@@ -195,6 +213,12 @@ main {
     padding: 16px 40px;
     border: 1px solid white;
     border-radius: 27px;
+
+    transition: .3;
+}
+
+#top-bar .button:hover {
+    transform: scale(1.1);
 }
 /* fine top bar */
 
@@ -232,14 +256,59 @@ nav {
 .recently-played h2 {
     margin-bottom: 30px;
 }
+
 .cards {
     gap: 15px;
 }
+
 .card {
     max-width: 180px;
 
     width: calc((100vw - 230px - 40px - 8px) / 6 - 15px / 6 * 5);
     /* larghezza viewport - sidebar - padding main - scrollbar */
+
+    position: relative;
+}
+
+.overlay {
+    max-width: 180px;
+    max-height: 180px;
+    width: calc((100vw - 230px - 40px - 8px) / 6 - 15px / 6 * 5);
+    height: calc((100vw - 230px - 40px - 8px) / 6 - 15px / 6 * 5);
+    /* larghezza viewport - sidebar - padding main - scrollbar */
+
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    
+    transition: .3s ease;
+    
+}
+
+.overlay .fa-circle-play {
+    font-size: 60px;
+    color: white;
+    opacity: 0;
+    transition: .3s ease;
+}
+
+.card:hover .overlay {
+    visibility: visible;
+    opacity: 1;
+}
+
+.card:hover .fa-circle-play {
+    opacity: 1;
+}
+
+.popular-artist .overlay {
+    border-radius: 50%;
 }
 
 .card img {
@@ -284,10 +353,12 @@ nav {
 
 #now-playing {
     display: flex;
+    justify-content: space-between;
     background-color: #282828;
     position: fixed;
     width: 100%;
     height: 90px;
+    z-index: 10;
 }
 
 .now-playing-left {
@@ -295,7 +366,7 @@ nav {
     font-weight: bold;
     align-items: center;
     gap: 10px;
-    max-width: 25%;
+    width: 100%;
     flex-grow: 1;
 
     padding: 0px 10px;
@@ -309,6 +380,9 @@ nav {
     margin-right: 40px;
 }
 
+.song a:hover {
+    text-decoration: underline;
+}
 .now-playing-left .song .title {
     color: white;
     font-size: 20px;
@@ -320,7 +394,8 @@ nav {
 }
 
 .now-playing-middle {
-    flex-grow: 1;
+    width: 100%;
+    flex-grow: 2;
 }
 .now-playing-middle .upper {
     color: white;
@@ -337,6 +412,14 @@ nav {
     padding: 0px 10px;
 }
 
+.now-playing-middle .upper i:hover {
+    cursor: pointer;
+}
+
+.now-playing-middle .upper .fa-circle-play:hover {
+    transform: scale(1.2);
+}
+
 .now-playing-middle .lower {
     color: white;
     font-size: 12px;
@@ -346,36 +429,72 @@ nav {
 }
 
 .bar {
-    padding: 0px 20px;
+    margin: 0px 20px;
     width: 100%;
     max-width: 430px;
+    background-color: #5B5B5B;
+    border-radius: 2px 2px 2px 2px;
+    position: relative;
 }
 
 .bar .left {
     height: 4px;
+    border-radius: 2px 2px 2px 2px;
     width: 20%;
     background-color: #C1C1C1;
 }
 
 .bar .right {
     height: 4px;
+    border-radius: 0px 2px 2px 0px;
     width: 80%;
     background-color: #5B5B5B;
+}
+
+.bar .cirlce {
+    background-color: white;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    position: absolute;
+    left: calc(20% - 5px);
+    top: -3px;
+    visibility: hidden;
 }
 
 .now-playing-right {
     justify-content: flex-end;
     align-items: center;
-    max-width: 25%;
-    flex-grow: 1;
     gap: 10px;
     color: white;
-    padding-right: 10px;
+    padding:0px 10px;
+    width: 100%;
+    flex-grow: 1;
+}
+
+.now-playing-right i:hover {
+    cursor: pointer;
 }
 
 .now-playing-right .bar {
     max-width: 110px;
     padding: 0;
+}
+
+.now-playing-right .bar .cirlce {
+    position: 50%;
+}
+
+.bar:hover {
+    cursor: pointer;
+}
+
+.bar:hover .cirlce {
+    visibility: visible;
+}
+
+.bar:hover .left {
+    background-color: lime;
 }
 /**************************
     FINE NOW PLAYING BAR
@@ -398,6 +517,10 @@ nav {
         /* larghezza viewport - sidebar - padding main - scrollbar */
     }
 
+    .overlay {
+        width: calc((100vw - 230px - 40px - 8px) / 4 - 15px / 4 * 3);
+        height: calc((100vw - 230px - 40px - 8px) / 4 - 15px / 4 * 3);
+    }
 }
 /* fine media query medium */
 
@@ -409,6 +532,14 @@ nav {
         max-width: 100%;
         width: calc((100vw - 230px - 40px - 8px) / 2 - 15px / 2);
         /* larghezza viewport - sidebar - padding main - scrollbar */
+    }
+
+    .overlay {
+        max-width: 100%;
+        max-height: 100%;
+        width: calc((100vw - 230px - 40px - 8px) / 2 - 15px / 2);
+        height: calc((100vw - 230px - 40px - 8px) / 2 - 15px / 2);
+
     }
 }
 /* fine media query small */
@@ -430,6 +561,11 @@ nav {
         max-width: 100%;
         width: calc((100vw - 50px - 40px - 8px) / 2 - 15px / 2);
         /* larghezza viewport - sidebar - padding main - scrollbar */
+    }
+
+    .overlay {
+        width: calc((100vw - 50px - 40px - 8px) / 2 - 15px / 2);
+        height: calc((100vw - 50px - 40px - 8px) / 2 - 15px / 2);
     }
     /* fine main */
 
