--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ a {
 a:hover {
     color: #D2D2D2;
 }
+
+a:hover svg path {
+    fill: white;
+}
 /**************************
     FINE COMMON
 **************************/
@@ -77,6 +81,15 @@ a:hover {
     height: calc(100vh - 90px);
     padding: 20px 20px 0px;
     overflow: auto;
+}
+
+#sidebar svg {
+    height: 30px;
+}
+
+
+svg path {
+    fill: #787B82;
 }
 
 .mobile-hidden {
@@ -96,6 +109,9 @@ a:hover {
     font-weight: bold;
     line-height: 2.2;
     margin-bottom: 20px;
+
+    flex-direction: column;
+    gap: 5px;
 }
 
 .sidebar-nav .fa-solid {
@@ -103,11 +119,18 @@ a:hover {
     margin-right: 6px;
 }
 
+.sidebar-nav a {
+    gap: 10px;
+}
+
 .sidebar-nav a.active {
     color: white;
     position: relative;
 }
 
+.sidebar-nav a.active svg path {
+    fill: white;
+}
 .yellow-line {
     background-color: #B4F458;
     width: 3px;
@@ -120,7 +143,8 @@ a:hover {
 }
 
 .playlist {
-    overflow: auto;
+    min-height: 130px;
+    overflow: hidden;
 }
 
 .playlist-title {
@@ -134,6 +158,10 @@ a:hover {
     font-size: 14px;
     font-weight: bold;
     line-height: 2.2;
+
+    max-height: calc(100% - 66px);
+    min-height: 60px;
+    overflow: auto;
 }
 
 .playlist a:hover .create-playlist {
@@ -161,6 +189,12 @@ a:hover {
     align-content: flex-end;
 }
 
+#sidebar .profile img {
+    background-color: #7E7E7E;
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+}
 .install {
     margin-top: 10px;
 }
@@ -178,6 +212,8 @@ a:hover {
 .account {
     color: white;
     padding-bottom: 10px;
+    align-items: center;
+    gap: 10px;
 }
 
 .account .fa-solid {
@@ -195,10 +231,9 @@ a:hover {
 
 main {
     background-color: #151922;
-    overflow: auto;
+    overflow-y: auto;
     width: calc(100vw - 230px);
     height: calc(100vh - 90px);
-    overflow-x: hidden;
 }
 
 #main-content {
@@ -220,12 +255,11 @@ main {
     color: white;
     text-decoration: none;
     font-size: 9px;
-    font-weight: bold;
     padding: 16px 40px;
     border: 1px solid white;
     border-radius: 27px;
 
-    transition: .3;
+    transition: .3s;
 }
 
 #top-bar .button:hover {
@@ -299,7 +333,7 @@ nav {
     opacity: 0;
     visibility: hidden;
     
-    transition: .3s ease;
+    transition: .3s ease-in-out;
     
 }
 
@@ -307,7 +341,7 @@ nav {
     font-size: 60px;
     color: #D2D2D2;
     opacity: 0;
-    transition: .3s ease;
+    transition: .3s ease-in-out;
 }
 
 .card:hover .overlay {
@@ -388,8 +422,12 @@ nav {
     width: 42px;
 }
 
+.now-playing-left .links {
+    gap: 10px;
+}
+
 .now-playing-left .song {
-    margin-right: 40px;
+    margin-right: 30px;
 }
 
 .song a:hover {
@@ -397,7 +435,11 @@ nav {
 }
 .now-playing-left .song .title {
     color: white;
-    font-size: 20px;
+    font-size: 14px;
+}
+
+.now-playing-left .song .name {
+    font-size: 12px;
 }
 
 .now-playing-left .like, 
@@ -422,6 +464,7 @@ nav {
 .now-playing-middle .upper .fa-circle-play {
     font-size: 30px;
     padding: 0px 10px;
+    transition: .2s;
 }
 
 .now-playing-middle .upper i:hover {
@@ -441,12 +484,16 @@ nav {
 }
 
 .bar {
-    margin: 0px 20px;
-    width: 100%;
+    width: 100px;
     max-width: 430px;
     background-color: #5B5B5B;
     border-radius: 2px 2px 2px 2px;
     position: relative;
+}
+
+.now-playing-middle .bar {
+    width: 100%;
+    margin: 0px 20px;
 }
 
 .bar .left {
@@ -479,7 +526,7 @@ nav {
     align-items: center;
     gap: 10px;
     color: white;
-    padding:0px 10px;
+    padding: 0px 10px;
     width: 100%;
     flex-grow: 1;
 }
@@ -517,6 +564,31 @@ nav {
     FINE NOW PLAYING BAR
 **************************/
 
+/**************************
+    CUSTOM SCROLLBAR
+**************************/
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #585858; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #949494; 
+}
+
+/**************************
+    FINE CUSTOM SCROLLBAR
+**************************/
 
 /**************************
     MEDIA QUERY
@@ -558,6 +630,24 @@ nav {
         height: calc((100vw - 230px - 40px - 8px) / 2 - 15px / 2);
 
     }
+
+    .now-playing-left img {
+        width: 36px;
+    }
+
+    .now-playing-left .links {
+        flex-direction: column;
+        gap: 0px;
+    }
+
+    .now-playing-left .song {
+        margin-right: 15px;
+    }
+
+    .bar {
+        width: 80px;
+    }
+    
 }
 /* fine media query small */
 
@@ -608,6 +698,11 @@ nav {
         display: flex;
         flex-direction: column;
         height: 100%;
+        overflow: auto;
+    }
+
+    .mobile-shown::-webkit-scrollbar {
+        width: 0px;
     }
 
     .mobile-shown .mobile {
@@ -615,12 +710,8 @@ nav {
         font-size: 30px;
     }
 
-    .fa-house.mobile {
-        font-size: 26.66px;
-    }
-    
-    .fa-circle-down {
-        margin-bottom: 20px;
+    .mobile-shown a {
+        line-height: 0;
     }
 
     .logo {
@@ -630,12 +721,33 @@ nav {
 
     .profile {
         justify-content: center;
-    }
-
-    .fa-circle-user {
-        color: white;
+        gap: 10px;
     }
     /* fine sidebar */
+
+    /* now-playing */
+    .now-playing-left img {
+        width: 30px;
+    }
+
+    .now-playing-left .song {
+        margin-right: 5px;
+    }
+
+    .now-playing-left i,
+    .now-playing-right i {
+        font-size: 15px;
+    }
+
+    .bar {
+        width: 60px;
+    }
+
+    .now-playing-middle .upper {
+        gap: 10px;
+        font-size: 15px;
+    }
+    /* fine now playing */
 
 }
 /* fine media query x-small */
@@ -644,29 +756,3 @@ nav {
     FINE MEDIA QUERY
 **************************/
 
-
-/**************************
-    CUSTOM SCROLLBAR
-**************************/
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #585858; 
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #949494; 
-}
-
-/**************************
-    FINE CUSTOM SCROLLBAR
-**************************/
